# htmx-test

./: .gitignore  README.md  pyproject.toml
htmx_test/: manage.py
htmx_test/basic/: admin.py  forms.py  models.py  urls.py  views.py
htmx_test/basic/migrations/: 0001_initial.py  0002_organisation_person_email_address_and_more.py
htmx_test/basic/templates/basic/: base.html  index.html  organisation_create.html  person_form.html
htmx_test/htmx_test/: asgi.py  settings.py  urls.py  wsgi.py
